feat: udistrital/sga_documentacion#97 actualización mid funciones cupos
