# routers/router.go
@@ -8,9 +8,8 @@
 package routers
 
 import (
-	"github.com/udistrital/sga_inscripcion_mid/controllers"
-
 	"github.com/astaxie/beego"
+	"github.com/udistrital/sga_inscripcion_mid/controllers"
 )
 
 func init() {
@@ -58,6 +57,11 @@ func init() {
 		beego.NSNamespace("/transferencia",
 			beego.NSInclude(
 				&controllers.Transferencia_reingresoController{},
+			),
+		),
+		beego.NSNamespace("/cupos",
+			beego.NSInclude(
+				&controllers.CuposController{},
 			),
 		),
 	)
